# niventic-search

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  error.txt
src/: config.rs  hotkey.rs  icons.rs  indexer.rs  main.rs
ui/: app.slint
