[package]
name = "niventic"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.15", features = ["raw-window-handle-06"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
lnk = "0.5"
raw-window-handle = "0.6"
tray-icon = "0.21.3"
winreg = "0.55.0"
image = "0.25.9"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
]

[build-dependencies]
slint-build = "1.15.0"
